--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+body {
+    background-color: #5c6564;
+    display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+    grid-gap: 15px;
+    margin-top: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Editor {
+    display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#editor {
+    width: 50%;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #f4f4f4;
+    overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+#preview {
+    width: 50%;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #f4f4f4;
+    margin-left: 10px;
+    font-family: "Comfortaa", sans-serif
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+    width: 50%;
+}
+
+pre,
+code {
+    background-color: #ffffff;
+}
+
+pre {
+    padding: 10px;
+}
+
+@media(min-width: 992px) {
+    .main {
+        grid-template-columns: 1fr 1fr;
+    }
 }
